[project]
name = "docker-update-checker"
version = "1.0.0"
description = "Detect and apply updates to Docker containers via a curses UI"
requires-python = ">=3.10"
dependencies = [
    "docker>=6.0.0",
]

[project.scripts]
docker-update-checker = "docker_update_checker:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
